# TestTask

./: README.md
evil_corporation/: CMakeLists.txt  conanfile.txt
evil_corporation/configuration/: prepare_build.py
evil_corporation/configuration/cmake/: platform_dependencies.cmake  sources_parsing.cmake
evil_corporation/configuration/utils/: utils.py
evil_corporation/external_api/: api.h  btc_miner.h
evil_corporation/src/: evil_corporation.cpp
evil_corporation/src/black_market/: black_market.cpp  black_market.h
evil_corporation/src/black_market/items/base/: base_item.h
evil_corporation/src/black_market/items/coin/: coin.cpp  coin.h
evil_corporation/src/black_market/items/helm/: helm.cpp  helm.h
evil_corporation/src/black_market/items/jug/: jug.cpp  jug.h
evil_corporation/src/black_market/items/sword/: sword.cpp  sword.h
evil_corporation/src/black_market/items_factory/: item_factory.h
evil_corporation/src/client/: client.cpp  client.h
evil_corporation/src/client/base/: base_client.h
evil_corporation/src/common/api/: api_singleton.h  miner.h
evil_corporation/src/common/exceptions/: api_access_exception.h  memory_exception.h
evil_corporation/src/common/thread_pool/: thread_pool.cpp  thread_pool.h
